# exchange-knowledge-agent

./: .env.example  README.md  pyproject.toml
src/: config.py  main.py
src/agent/: email_processor.py  exchange_client.py  knowledge_base.py
src/models/: email_data.py
src/prompts/: main_prompt.py
